<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E208A"
                android:textStyle="bold"
                android:typeface="serif"
                android:text="@string/app_IngresaNombre" />

            <EditText
                android:id="@+id/Et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_nombre"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E208A"
                android:textStyle="bold"
                android:typeface="serif"
                android:text="@string/app_IngresaApellido" />

            <EditText
                android:id="@+id/Et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_apellido"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E208A"
                android:textStyle="bold"
                android:typeface="serif"
                android:text="@string/app_IngresaNControl" />

            <EditText
                android:id="@+id/Et3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_control"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E208A"
                android:textStyle="bold"
                android:typeface="serif"
                android:text="@string/app_IngresaUsu" />

            <EditText
                android:id="@+id/Et4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_Usuario"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/RadioGroup1"
                android:layout_width="216dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/Rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_IngInfo"
                    android:textAlignment="center"
                    android:textColor="#0E208A"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <RadioButton
                    android:id="@+id/Rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_IngAdm"
                    android:textAlignment="center"
                    android:textColor="#0E208A"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <RadioButton
                    android:id="@+id/Rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_IngCivil"
                    android:textAlignment="center"
                    android:textColor="#0E208A"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Bt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="registro"
                    android:text="@string/app_Registrar" />

                <Button
                    android:id="@+id/Bt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_Ingresar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>