<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:gravity="center"
            android:text="@string/app_Profesor"
            android:textAlignment="center"
            android:textColor="#0E208A"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"/>

        <LinearLayout
            android:layout_width="238dp"
            android:layout_height="197dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Tvv1"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_Profe1"
                    android:textAlignment="center"
                    android:textColor="#0E208A"
                    android:typeface="sans"/>

                <Switch
                    android:id="@+id/s1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvv2"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_Profe2"
                    android:textAlignment="center"
                    android:typeface="sans"
                    android:textColor="#0E208A" />


                <Switch
                    android:id="@+id/s2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvv3"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_Profe3"
                    android:textAlignment="center"
                    android:typeface="sans"
                    android:textColor="#0E208A" />


                <Switch
                    android:id="@+id/s3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvv4"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_Profe4"
                    android:textAlignment="center"
                    android:typeface="sans"
                    android:textColor="#0E208A" />


                <Switch
                    android:id="@+id/s4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvv5"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_Profee5"
                    android:textAlignment="center"
                    android:typeface="sans"
                    android:textColor="#0E208A" />


                <Switch
                    android:id="@+id/s5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borra"
                android:text="@string/app_salir" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cargar"
                android:text="@string/app_cargar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>